--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
-<div class="splash">
-  <div class="splash_logo">
-    BJL
+
+<div class="body">
+  <div class="reproductor">
+  <img src="https://campusiecah.org/www/F/WEB/IMAGES/Cadena_Ser_logo.svg.png">
+    <p>Sierra Noroeste de Madrid</p>
+<audio controls="controls" autoplay="autoplay" class="audio-player">
+<source src="http://108.59.7.153:17665/stream" type="audio/mp3">
+Tu navegador no es compatible con esta característica.
+</audio>
   </div>
-  <div class="splash_svg">
-    <svg width="100%" height="100%">
-      <rect width="100%" height="100%" >
-	  </svg>
-  </div>
-  <div class="splash_minimize">
-    <svg width="100%" height="100%">
-      <rect width="100%" height="100%" >
-	  </svg>
-  </div>
-</div>
-<div class="text">
-  <p>Duis quis</p>
-  <p>nec sapien</p>
-  <button>More</button>
+  
 </div>
