--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
+<body>
+    <div id=p1></div>
+</body>
 
-<div class="body">
-  <div class="reproductor">
-  <img src="https://campusiecah.org/www/F/WEB/IMAGES/Cadena_Ser_logo.svg.png">
-    <p>Sierra Noroeste de Madrid</p>
-<audio controls="controls" autoplay="autoplay" class="audio-player">
-<source src="http://108.59.7.153:17665/stream" type="audio/mp3">
-Tu navegador no es compatible con esta característica.
-</audio>
-  </div>
-  
-</div>
+<script src="https://radiowink.com/dist/freeV3.js"></script>
+<script>var p1 = new freeYess({target: '#p1', url: 'http://108.59.7.153:17665/stream', platform: 'ic', mountPoint: 'stream', logo: 'https://www.yesstreaming.com/img/default.png', artistc: 'F8BAB0', songtitlec: 'FFFFFF', buttonc: 'FFFFFF', bg: 'E81717', artwork: '1', autoplay: 'false',   })
+</script>
+
+</html>
